Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25194

On launch of project part of Qt Creator hangs

XMLWordPrintable

    • Windows

      I'm following the instructions found here: https://github.com/fritzing/fritzing-app/wiki/1.-Building-Fritzing to attempt to build fritzing and when I get to the point of loading the project in Qt Creator, Qt Creator appears to get stuck. There are no issues listed, the project has a little spinner that never quits, there's a "Reading Project phoenix" box in the bottom right that has a progress bar that is stuck at the minimum.

      When I close the application, the process qtcreator.exe doesn't stop. When I manually kill the process and select "End Process Tree", I get two errors: 1st, "The operation could not be completed. The handle is invalid", then subsequenctly: "One or more of the processes in this process tree could not be ended. The operation was not fully successful."

      I've restarted my machine to try to get it to work and it just does the same thing.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            spikeygg Greg Grotsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes