ProParser: Do not open a write channel for processes invoked for system()

If a process invoked via one of qmake's system() functions attempts to
read from stdin, it will currently hang Qt Creator. Prevent that.

Task-number: QTCREATORBUG-25194
Change-Id: I9c6411bcb2fb8e0d2705252cc6d27900472906a1
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>